--- a/Mission_to_Mars_Challenge_starter_code.ipynb
+++ b/Mission_to_Mars_Challenge_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 92.0.4515\n",
+      "Get LATEST driver version for 92.0.4515\n",
+      "Driver [/Users/genius/.wdm/drivers/chromedriver/mac64/92.0.4515.107/chromedriver] found in cache\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -77,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Mars 2020 Heads Into the Test Chamber</div>"
+       "<div class=\"content_title\">NASA Updates Mars 2020 Mission Environmental Review</div>"
       ]
      },
      "execution_count": 5,
@@ -97,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars 2020 Heads Into the Test Chamber\""
+       "'NASA Updates Mars 2020 Mission Environmental Review'"
       ]
      },
      "execution_count": 6,
@@ -119,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "'In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.'"
+       "'NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.'"
       ]
      },
      "execution_count": 7,
@@ -375,7 +388,7 @@
        "<link href=\"js/fancyBox/jquery.fancybox.css?v=2.1.5\" media=\"screen\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<link href=\"js/fancyBox/helpers/jquery.fancybox-thumbs.css?v=1.0.7\" rel=\"stylesheet\" type=\"text/css\"/>\n",
        "<script src=\"js/fancyBox/helpers/jquery.fancybox-thumbs.js?v=1.0.7\" type=\"text/javascript\"></script>\n",
-       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image\" style=\"width: 670px; height: 380px; position: absolute; top: 110px; left: 65px; opacity: 0.100036; overflow: hidden;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div></div></div></div></body></html>"
+       "<div class=\"fancybox-overlay fancybox-overlay-fixed\" style=\"width: auto; height: auto; display: block;\"><div class=\"fancybox-wrap fancybox-desktop fancybox-type-image fancybox-opened\" style=\"width: 670px; height: auto; position: absolute; top: 136px; left: 265px; opacity: 1; overflow: visible;\" tabindex=\"-1\"><div class=\"fancybox-skin\" style=\"padding: 15px; width: auto; height: auto;\"><div class=\"fancybox-outer\"><div class=\"fancybox-inner\" style=\"overflow: visible; width: 640px; height: 350px;\"><img alt=\"\" class=\"fancybox-image\" src=\"image/featured/mars3.jpg\"/></div></div><a class=\"fancybox-item fancybox-close\" href=\"javascript:;\" title=\"Close\"></a></div></div></div></body></html>"
       ]
      },
      "execution_count": 10,
@@ -660,13 +673,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Use browser to visit the URL \n",
     "url = 'https://marshemispheres.com/'\n",
-    "\n",
     "browser.visit(url)"
    ]
   },
@@ -679,7 +691,18 @@
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n"
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "for x in range(1,4):\n",
+    "    browser.visit(url)\n",
+    "    html = browser.html\n",
+    "    html_soup = soup(html, \"html.parser\")\n",
+    "    \n",
+    "# find url to info and navigate there\n",
+    "    url_to_info = html_soup.find_all('div', class_=\"item\").a['href']\n",
+    "# 2 variables - image_url, title\n",
+    "\n",
+    "#('div', class_=\"item\")a.[href] - there are 4 of them in a row\n",
+    "#create a list of dicitionaries {'image_url' : img_url}, 'title': title}"
    ]
   },
   {
@@ -722,6 +745,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
+       " <h3>Cerberus Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
+       " <h3>Schiaparelli Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
+       " <h3>Syrtis Major Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>,\n",
+       " <div class=\"item\">\n",
+       " <a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>\n",
+       " <div class=\"description\">\n",
+       " <a class=\"itemLink product-item\" href=\"valles.html\">\n",
+       " <h3>Valles Marineris Hemisphere Enhanced</h3>\n",
+       " </a>\n",
+       " <span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       " <p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
+       " </div>\n",
+       " <!-- end description -->\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "browser.visit(url)\n",
+    "html = browser.html\n",
+    "html_soup = soup(html, \"html.parser\")\n",
+    "url_to_info = html_soup.find_all('div', class_=\"item\")\n",
+    "url_to_info"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -744,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   },
   "nteract": {
    "version": "0.15.0"
