--- a/practice.ipynb
+++ b/practice.ipynb
@@ -545,7 +545,7 @@
     "# Scrape the list of books on the left hand side of page\n",
     "\n",
     "tag_box = html_soup.find('ul', class_='nav nav-list')\n",
-    "tags = tag_box.find_all('a')\n",
+    "tags = tag_box.find_all('a')[0]['href']\n",
     "\n",
     "for tag in tags:\n",
     "    book = tag.text\n",
