--- a/Mission_to_Mars_Challenge_starter_code.ipynb
+++ b/Mission_to_Mars_Challenge_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
     "import pandas as pd\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,25 +685,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
-    "\n",
+    "html = browser.html\n",
+    "html_soup = soup(html, \"html.parser\")\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "for x in range(1,4):\n",
-    "    browser.visit(url)\n",
-    "    html = browser.html\n",
-    "    html_soup = soup(html, \"html.parser\")\n",
+    "browser.links.find_by_partial_text('Enhanced').click()\n",
+    "tag_item = html_soup.find('div', class_=\"wrapper\")\n",
+    "tag_item\n",
     "    \n",
     "# find url to info and navigate there\n",
-    "    url_to_info = html_soup.find_all('div', class_=\"item\").a['href']\n",
+    "#for x in range(0,3)\n",
+    "# tag_item = html_soup.find('div', class_=\"collapsible results\")\n",
+    "# tag_url = html_soup.find_all('a', class_='itemLink product-item')[x]['href']\n",
+    "# tag_url.\n",
+    "#browser.links.find_by_partial_text('Next').click()\n",
+    "\n",
+    "# tag_url = tag_item.find_all('a')['href']\n",
+    "# tag_url\n",
+    "    \n",
     "# 2 variables - image_url, title\n",
     "\n",
     "#('div', class_=\"item\")a.[href] - there are 4 of them in a row\n",
     "#create a list of dicitionaries {'image_url' : img_url}, 'title': title}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"wrapper\">\n",
+       "<div class=\"container\">\n",
+       "<div class=\"widget block bar\">\n",
+       "<a href=\"https://astrogeology.usgs.gov/search\" style=\"float:right;text-decoration:none;\">\n",
+       "<img alt=\"Astropedia\" src=\"images/astropedia-logo-main.png\" style=\"width:200px;border:none;float:right;\"/>\n",
+       "<div style=\"clear:both;font-size:.8em;float:right;color:#888;\">Lunar and Planetary Cartographic Catalog</div>\n",
+       "</a>\n",
+       "<div style=\"float:left;height:60px;\">\n",
+       "</div>\n",
+       "</div>\n",
+       "<div class=\"full-content\">\n",
+       "<section class=\"block\" id=\"results-accordian\">\n",
+       "<div class=\"result-list\" data-section=\"product\" id=\"product-section\">\n",
+       "<div class=\"accordian\">\n",
+       "<h2>Products</h2>\n",
+       "<span class=\"count\">4 Results</span>\n",
+       "<span class=\"collapse\">Collapse</span>\n",
+       "</div>\n",
+       "<div class=\"collapsible results\">\n",
+       "<div class=\"item\">\n",
+       "<a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>\n",
+       "<div class=\"description\">\n",
+       "<a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
+       "<h3>Cerberus Hemisphere Enhanced</h3>\n",
+       "</a>\n",
+       "<span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       "<p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p>\n",
+       "</div>\n",
+       "<!-- end description -->\n",
+       "</div>\n",
+       "<div class=\"item\">\n",
+       "<a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>\n",
+       "<div class=\"description\">\n",
+       "<a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
+       "<h3>Schiaparelli Hemisphere Enhanced</h3>\n",
+       "</a>\n",
+       "<span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       "<p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p>\n",
+       "</div>\n",
+       "<!-- end description -->\n",
+       "</div>\n",
+       "<div class=\"item\">\n",
+       "<a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>\n",
+       "<div class=\"description\">\n",
+       "<a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
+       "<h3>Syrtis Major Hemisphere Enhanced</h3>\n",
+       "</a>\n",
+       "<span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       "<p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p>\n",
+       "</div>\n",
+       "<!-- end description -->\n",
+       "</div>\n",
+       "<div class=\"item\">\n",
+       "<a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>\n",
+       "<div class=\"description\">\n",
+       "<a class=\"itemLink product-item\" href=\"valles.html\">\n",
+       "<h3>Valles Marineris Hemisphere Enhanced</h3>\n",
+       "</a>\n",
+       "<span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/>\n",
+       "<p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p>\n",
+       "</div>\n",
+       "<!-- end description -->\n",
+       "</div>\n",
+       "</div>\n",
+       "<!-- end this-section -->\n",
+       "</div>\n",
+       "</section>\n",
+       "</div>\n",
+       "<div class=\"navigation clear\" style=\"display: none;\">\n",
+       "<a class=\"itemLink product-item\" href=\"#\" onclick=\"showMain()\">\n",
+       "<h3>Back</h3>\n",
+       "</a>\n",
+       "</div>\n",
+       "</div>\n",
+       "<footer>\n",
+       "<div class=\"left\">\n",
+       "<a href=\"#\">Search</a> |\n",
+       "               <a href=\"#\">About</a> |\n",
+       "               <a href=\"#\">Contact</a>\n",
+       "</div>\n",
+       "<div class=\"right\">\n",
+       "<a href=\"#\">GUSS Science Center</a>\n",
+       "</div>\n",
+       "</footer>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# tag_url = html_soup.find_all('a', class_='itemLink product-item')[x]['href']\n",
+    "# tag_url\n",
+    "\n"
    ]
   },
   {
@@ -820,9 +936,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pythonData3.7",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata3.7"
   },
   "language_info": {
    "codemirror_mode": {
