cleaned up a bit

--- a/Mission_to_Mars_Challenge_starter_code.ipynb
+++ b/Mission_to_Mars_Challenge_starter_code.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,38 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Create a list to hold the images and titles.\n",
-    "hemisphere_image_urls = []\n",
-    "html = browser.html\n",
-    "html_soup = soup(html, \"html.parser\")\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "browser.links.find_by_partial_text('Enhanced').click()\n",
-    "tag_item = html_soup.find('div', class_=\"wrapper\")\n",
-    "tag_item\n",
-    "    \n",
-    "# find url to info and navigate there\n",
-    "#for x in range(0,3)\n",
-    "# tag_item = html_soup.find('div', class_=\"collapsible results\")\n",
-    "# tag_url = html_soup.find_all('a', class_='itemLink product-item')[x]['href']\n",
-    "# tag_url.\n",
-    "#browser.links.find_by_partial_text('Next').click()\n",
-    "\n",
-    "# tag_url = tag_item.find_all('a')['href']\n",
-    "# tag_url\n",
-    "    \n",
-    "# 2 variables - image_url, title\n",
-    "\n",
-    "#('div', class_=\"item\")a.[href] - there are 4 of them in a row\n",
-    "#create a list of dicitionaries {'image_url' : img_url}, 'title': title}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -809,11 +778,29 @@
        "</div>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "html = browser.html\n",
+    "html_soup = soup(html, \"html.parser\")\n",
+    "browser.links.find_by_partial_text('Enhanced').click()\n",
+    "sleep(3)\n",
+    "tag_item = html_soup.find('div', class_=\"wrapper\")\n",
+    "tag_item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "# tag_url = html_soup.find_all('a', class_='itemLink product-item')[x]['href']\n",
